fix of PUT request, appearance add CSS to pin-page
Fix issue with PUT request not updating Pin object

Previously, the PUT request was not properly updating the Pin object
because the pin.save() method was missing. This has been resolved by
adding the necessary save operation.

Additionally, the pin-page component has been enhanced with CSS styling
to improve its appearance and layout.

Furthermore, error messages are now being displayed when creating or
editing a pin. These error messages provide feedback to the user in
case of any issues during pin creation or successful pin
building/editing.

--- a/front/src/app/create/create.component.css
+++ b/front/src/app/create/create.component.css
@@ -220,3 +220,17 @@
     color: #ff0f0f;
     font-size: 1em;
   }
+
+  .success-text{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    margin-top: 10px;
+    color: black;
+    font-size: 1em;
+  }
+
+  .success-text img{
+    width: 20px;
+  }
