add register functionality and delete in settings

--- a/front/src/app/create/create.component.html
+++ b/front/src/app/create/create.component.html
@@ -28,7 +28,7 @@
 
           <button *ngIf="!editMode" type="button" (click)="saveData()">Save</button>
           <button *ngIf="editMode" type="button" (click)="editData()">Edit</button>
-          <button *ngIf="editMode" (click)="deleteData()" >Delete Pin</button>
+          <a [routerLink]="'/home/'"><button *ngIf="editMode" (click)="deleteData()" >Delete Pin</button></a>
           <p *ngIf="submitted" class="success-text">Success!<img src="./../../assets/images/success-icon.svg"></p>
         </div>
       </div>
