--- a/front/src/app/settings/settings.component.html
+++ b/front/src/app/settings/settings.component.html
@@ -29,7 +29,7 @@
       <p>or</p>
       <br>
       <div class="delete-button">
-        <button>Delete Account</button>
+        <a (click)="deleteUser()" >Delete Account</a>
       </div>
     </form>
   </body>
